--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
   assets:
     - assets/company.png
     - assets/google.png
+    - assets/icons/logo.png
+    - assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
