--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
 
   ar_location_view: ^2.0.16
   google_maps_flutter: ^2.5.0
+  shared_preferences: ^2.0.9
 
 dev_dependencies:
   flutter_test:
