--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   ar_location_view: ^2.0.16
   google_maps_flutter: ^2.5.0
   shared_preferences: ^2.0.9
+  flutter_map: ^8.0.0
+  latlong2: ^0.9.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
