--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   flutter_map: ^8.0.0
   latlong2: ^0.9.1
   url_launcher: ^6.3.1
+  image: ^3.0.1
+  flutter_svg: ^1.0.3
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
