--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_sign_in: ^6.2.2
   google_fonts: ^6.2.1
   toastification: ^2.3.0
+  dots_indicator: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -47,6 +48,9 @@ dependencies:
   flutter_map: ^8.0.0
   latlong2: ^0.9.1
   url_launcher: ^6.3.1
+  image: ^3.0.1
+  flutter_svg: ^1.0.3
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
