--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.10.1
+  cloud_firestore: ^5.6.5
   firebase_auth: ^5.4.1
   google_sign_in: ^6.2.2
   google_fonts: ^6.2.1
