--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^3.10.1
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.4.1
+  firebase_storage: ^12.4.4
   google_sign_in: ^6.2.2
   google_fonts: ^6.2.1
   toastification: ^2.3.0
@@ -52,6 +53,8 @@ dependencies:
   image: ^3.0.1
   flutter_svg: ^1.0.3
   image_picker: ^0.8.4+4
+  intl: ^0.20.2
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
