--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,12 @@ dependencies:
   intl: ^0.20.2
   path: ^1.9.0
 
+  flutter_dotenv: ^5.1.0 # For environment variables
+  crypto: ^3.0.3 # For AWS signature calculation
+  path_provider: ^2.1.2 # For temp file handling during migration
+  http: ^1.2.0
+  uuid: ^4.5.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -80,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 
   assets:
+    - .env
     - assets/company.png
     - assets/google.png
     - assets/icons/logo.png
