--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^3.10.1
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.4.1
+  firebase_storage: ^12.4.4
   google_sign_in: ^6.2.2
   google_fonts: ^6.2.1
   toastification: ^2.3.0
@@ -52,6 +53,14 @@ dependencies:
   image: ^3.0.1
   flutter_svg: ^1.0.3
   image_picker: ^0.8.4+4
+  intl: ^0.20.2
+  path: ^1.9.0
+
+  flutter_dotenv: ^5.1.0 # For environment variables
+  crypto: ^3.0.3 # For AWS signature calculation
+  path_provider: ^2.1.2 # For temp file handling during migration
+  http: ^1.2.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 
   assets:
+    - .env
     - assets/company.png
     - assets/google.png
     - assets/icons/logo.png
