--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dependencies:
   http: ^1.2.0
   uuid: ^4.5.1
 
+  location: ^5.0.3
+  dio: ^5.3.2
+  flutter_polyline_points: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
