weather API and SOS feature

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -53,4 +53,10 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+      <queries>
+  <intent>
+    <action android:name="android.intent.action.DIAL" />
+    <data android:scheme="tel" />
+  </intent>
+</queries>
 </manifest>
