--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,7 @@ flutter:
     - assets/icons/humidity.svg
     - assets/icons/wind.svg
     - assets/icons/temperature.svg
+    - assets/icons/profile.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
